# es-qlite

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  docker-compose.openmetadata.yaml
.githooks/: pre-commit
.github/workflows/: ci.yml
benches/: gutenberg_bench.rs
compat-tests/jaeger/: docker-compose.yml
src/: config.rs  error.rs  lib.rs  main.rs  server.rs
src/model/: bulk.rs  document.rs  mapping.rs  mod.rs  search.rs
src/query/: ast.rs  mod.rs  parser.rs  translator.rs
src/routes/: bulk.rs  cluster.rs  document.rs  index.rs  mod.rs  multi.rs  search.rs
src/storage/: connection.rs  mod.rs  reader.rs  registry.rs  schema.rs  writer.rs
tests/: comparison.rs  jaeger_compat.rs  opensearch_client.rs  yaml_runner.rs
tests/common/: mod.rs
